[package]
name = "rtp_jyushin_maru"
version = "1.0.0"
authors = ["Ryo Konishi <todoroki.auone@gmail.com>"]
edition = "2018"

[dependencies]
uuid = {version = "0.5", features = ["v4"]}
time = "0.1.14"
chrono = "0.4"
config = "0.9"
postgres = {version = "0.15", features = ["with-chrono", "with-uuid"] }
rtp-rs = "0.2"
log = "0.4"
env_logger = "*"
clap = "2"
directories = "1"
